# echoflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: commit-push.md  create-plan.md  next-phase.md  phase-status.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/dotfiles/: .zshrc
.github/workflows/: ci.yml
plan/: README.md  echoflow.plan.md
plan/archive/: echoflow-v2.1-archived.md  echoflow-v3.0-archived.md
requirements/: echoflow-v1.prd.md  eventflow-v1.prd.md
scripts/: docker_test.py  test_phase2.py
src/echoflow/: __init__.py
src/echoflow/ai/: __init__.py  model_manager.py
src/echoflow/config/: __init__.py  settings.py
src/echoflow/converters/: __init__.py  base.py  docling_converter.py
src/echoflow/exceptions/: __init__.py  base.py
src/echoflow/server/: __init__.py  health.py  main.py
src/echoflow/utils/: __init__.py  container.py  logging.py
tests/: conftest.py
tests/unit/: test_ai_model_manager.py  test_config.py  test_container.py  test_converters.py  test_docling_converter.py  test_exceptions.py  test_health.py  test_logging.py  test_server_main.py
